--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ node_js:
   - v6
   - v4
 after_script: cat ./coverage/lcov.info | coveralls
+
+notifications:
+  email:
+    recipients:
+      - one@example.com
+    on_success: never # default: change
+    on_failure: never # default: always
